--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
 
+{
+  "name": "chatbot",
+  "version": "1.0.0",
+  "description": "Simple Chatbot App with Node.js and MongoDB",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
+}
