--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
-
 {
   "name": "chatbot",
   "version": "1.0.0",
-  "description": "Simple Chatbot App with Node.js and MongoDB",
+  "description": "Node.js chatbot with MongoDB",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
